<resources>
    <string name="app_name">PMDM02_EnriqueFernandez</string>

    <!--MAIN ACTIVITY-->
    <string name="main_boton_iniciar">INICIAR</string>
    <string name="main_logo_content_description">Logo de Pirate Studio</string>

    <!--LOGIN ACTIVITY-->
    <string name="login_textview_iniciarsesion">Iniciar Sesión:</string>
    <string name="login_edittext_placeholder_usuario">Usuario</string>
    <string name="login_edittext_placeholder_contrasena">Contraseña</string>
    <string name="login_edittext_usuario_userpredeterminado">pirate@studio.com</string>
    <string name="login_boton">INICIO</string>
    <string name="login_registro">Registro</string>

    <!--RECICLER VIEW-->
    <string name="recicler_row_plataforma_titulo">TITULO DE LA PLATAFORMA</string>
    <string name="recicler_row_plataforma_titulo_description">Titulo de la plataforma</string>

    <!--MENU PLATAFORMAS-->
    <string name="menu_plataformas_historial">Historial</string>
    <string name="menu_plataformas_ayuda">Ayuda</string>
    <string name="menu_plataformas_acercade">Acerca De</string>

    <!--REGISTRO-->
    <string name="registro_titulo">Registro de usuario</string>
    <string name="registro_hint_nombre">Nombre del usuario</string>
    <string name="registro_hint_email">Email</string>
    <string name="registro_hint_telefono">Teléfono</string>
    <string name="registro_hint_contrasena">Contraseña</string>
    <string name="registro_hint_confirmar_contrasena">Confirmar contraseña</string>
    <string name="registro_boton">REGISTRARSE</string>

    <!--ACERCA DE-->
    <string name="dialogo_acercade_datos_colegio">I.E.S Al-Ándalus\n2º DAM\n\nProgramación multimedia\ny\n dispositivos móviles\n\nProfesor: Sergio García Sanz</string>
    <string name="dialogo_acercade_nombre_autor">Enrique Octavio Fernández Chacón</string>

    <!--AYUDA-->
    <string name="dialogo_ayuda_titulo">AYUDA</string>
    <string name="dialogo_ayuda_texto">Si desea obtener ayuda\ncontáctenos a través\ndel correo:\nsoporte@piratestudio.com</string>
    <string name="dialogo_ayuda_presentacion">A continuación te mostramos un texto inservible:</string>
    <string name="dialogo_ayuda_loremipsun">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum\n\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!--PELICULA ACTIVTY-->
    <string name="pelicula_boton_reproducir">REPRODUCIR</string>
    <string name="pelicula_titulo_sinopsis">SINOPSIS</string>

    <!--HISTORIAL-->
    <string name="historial_titulo">HISTORIAL DE VISUALIZACIÓN</string>
</resources>