<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/logo_color"
        android:contentDescription="@string/main_logo_content_description" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="250dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="11dp"
                android:gravity="center"
                android:text="@string/dialogo_ayuda_titulo"
                android:textColor="@color/secondary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="11dp"
                android:gravity="center"
                android:text="@string/dialogo_ayuda_texto"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialogo_ayuda_presentacion"
                android:gravity="center"
                android:textColor="@color/primary"
                android:textSize="16sp"
                android:textStyle="bold" />/>

            <TextView
                android:padding="20dp"
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialogo_ayuda_loremipsun" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>