<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/ivLogoPrincipal"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/main_logo_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_no_background" />


    <TextView
        android:id="@+id/tvIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="@color/primary"
        android:fontFamily="@font/chewy_regular"
        android:textSize="24sp"
        android:text="@string/login_textview_iniciarsesion"
        app:layout_constraintTop_toBottomOf="@+id/ivLogoPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="176dp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textNoSuggestions"
        android:text="@string/login_edittext_usuario_userpredeterminado"
        android:hint="@string/login_edittext_placeholder_usuario"
        android:textColorHint="@color/secondary"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvIniciarSesion" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        android:textColorHint="@color/secondary"
        android:hint="@string/login_edittext_placeholder_contrasena"
        app:layout_constraintTop_toBottomOf="@+id/etUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="101dp" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="#551E19"
        android:fontFamily="@font/chewy_regular"
        android:padding="20dp"
        android:text="@string/login_boton"
        android:textColor="#C56E33"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="221dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="41dp"
        android:text="@string/login_registro"
        android:textColor="@color/primary"
        android:fontFamily="@font/wallpoet_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>