<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/logo_color"
        android:contentDescription="@string/main_logo_content_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="11dp"
            android:gravity="center"
            android:text="@string/dialogo_acercade_nombre_autor"
            android:textColor="@color/secondary"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="11dp"
            android:gravity="center"
            android:text="@string/dialogo_acercade_datos_colegio"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>